--- a/.github/workflows/android.publish.yml
+++ b/.github/workflows/android.publish.yml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Revert to Working Commit
+        env:
+          COMMIT_ID: aa391039819a4c10d9fbd4bee108ec17d02c3678
+        run:
+          git fetch --tags
+          git checkout $COMMIT_ID
+          
 
       - uses: actions/setup-node@master
         with:
